Updated Copyright & Removed Version Number

--- a/Specs/index.html
+++ b/Specs/index.html
@@ -316,7 +316,7 @@ M                                </br>
                 <a href="https://www.instagram.com/DoctorSoup143/" class="fab fa-instagram" target="_blank"></a>
             </div>
             <div class="legal">
-                <p><span style="font-family: 'Teko', sans-serif;">©Copyright DoctorSoup143 - 2018-2019 | <a href="http://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="http://DoctorSoup143.tv/Contact">Contact</a> - V0.16</span></p>
+                <p><span style="font-family: 'Teko', sans-serif;">©Copyright DoctorSoup143 - 2019 | <a href="http://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="http://DoctorSoup143.tv/Contact">Contact</a></span></p>
             </div>
         </div>
     </div>
