--- a/Teams/index.html
+++ b/Teams/index.html
@@ -133,7 +133,7 @@
                 <a href="https://www.instagram.com/DoctorSoup143/" class="fab fa-instagram" target="_blank"></a>
             </div>
             <div class="legal">
-                <p>© Copyright DoctorSoup143 - 2018-2019 | <a href="https://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="https://DoctorSoup143.tv/Contact">Contact</a> - V0.16</p>
+                <p>© Copyright DoctorSoup143 - 2019 | <a href="https://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="https://DoctorSoup143.tv/Contact">Contact</a></p>
             </div>
         </div>
     </div>
