--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <a href="https://www.instagram.com/DoctorSoup143/" class="fab fa-instagram" target="_blank"></a>
             </div>
             <div class="legal">
-                <p>©Copyright DoctorSoup143 - 2018-2019 | <a href="http://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="http://DoctorSoup143.tv/Contact">Contact</a> - V0.16</p>
+                <p>©Copyright DoctorSoup143 - 2019 | <a href="http://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="http://DoctorSoup143.tv/Contact">Contact</a></p>
             </div>
         </div>
     </div>
