--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="container-fluid">
         <div class="text-div" align="center">
             <p style=" font-size: 45px;">DoctorSoup143</p>
-            <p style=" font-size: 30px;">BROADCASTER, COMPETITIVE TEAM FOUNDER, AND MULTIPLATFORM CONTENT CREATOR.</p>
+            <p style=" font-size: 30px;">BROADCASTER, STUDIO FOUNDER, AND MULTIPLATFORM CONTENT CREATOR.</p>
         </div>
         <div class="row justify-content-md-center">
             <div class="col-0" align="center">
