Form Subject Edits
-Removed Competitive team and VOD review request
-Added The Tarkov Handbook

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -71,8 +71,7 @@
                 <select id="input2" name="Reason:" required>
                     <option value="" selected disabled hidden>Subject</option>
                     <option value="Stream Inquiry">Buisness Inquiry</option>
-                    <option value="Competitive Team Inquiry">Competitive Team Inquiry</option>
-					<option value="VOD Review Request">VOD Review Request</option>
+                    <option value="Competitive Team Inquiry">The Tarkov Handbook</option>
                     <option id="admOption" value="Other">Other</option>
                 </select>
 				
