--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="row justify-content-md-center">
             <div class="col-0" align="center">
-                <a href="https://www.twitch.tv/DoctorSoup143_" target="_blank" class="Twitch-button"><span class="left"><i class="far fa-heart"></i></span><span class="right">Follow</span></a>
+                <a href="https://www.twitch.tv/DoctorSoup143" target="_blank" class="Twitch-button"><span class="left"><i class="far fa-heart"></i></span><span class="right">Follow</span></a>
             </div>
             <div class="col-0" align="center">
                 <a href="https://streamlabs.com/DoctorSoup143" target="_blank" class="Twitch-button"><span class="left"><i class="fas fa-hand-holding-usd"></i></span><span class="right">Send A Tip</span></a>
@@ -83,7 +83,7 @@
             </div>
 			<!--
             <div class="col-0" align="center">
-                <a href="https://www.twitch.tv/subs/DoctorSoup143_" target="_blank" class="Mixer-button-sub"><span class="left">Subscribe</span><span class="right">$4.99</span></a>
+                <a href="https://www.twitch.tv/subs/DoctorSoup143" target="_blank" class="Mixer-button-sub"><span class="left">Subscribe</span><span class="right">$4.99</span></a>
             </div>
 			-->
 
@@ -152,7 +152,7 @@
                 <a href="https://www.instagram.com/DoctorSoup143/" class="fab fa-instagram" target="_blank"></a>
             </div>
             <div class="legal">
-                <p>©Copyright DoctorSoup143 - 2019 | <a href="http://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="http://DoctorSoup143.tv/Contact">Contact</a></p>
+                <p>©Copyright DoctorSoup143 - 2020 | <a href="http://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="http://DoctorSoup143.tv/Contact">Contact</a></p>
             </div>
         </div>
     </div>
