Udated Specs Page
-Swtched listing to AMD Chip

--- a/Specs/index.html
+++ b/Specs/index.html
@@ -113,7 +113,7 @@ M                                </br>
                                 </br>
                                 </br> <span style="color: #b71c1c;">Motherboard:</span> Gigabyte GA-78LMT-USB3
                                 </br>
-                                </br> <span style="color: #b71c1c;">CPU:</span> Intel i5 4440
+                                </br> <span style="color: #b71c1c;">CPU:</span> AMD FX 8350
                                 </br>
                                 </br> <span style="color: #b71c1c;">GPU:</span> NVIDIA GTX 750 TI
                                 </br>
