Updated Specs Page
-Added headset

--- a/Specs/index.html
+++ b/Specs/index.html
@@ -144,7 +144,7 @@ M                                </br>
                                 </br>
                                 </br> <span style="color: #b71c1c;">Mouse Pad:</span> Logitech G640
                                 </br>
-                                </br> <span style="color: #b71c1c;">Keyboard:</span> Razer Blackwidow Chroma
+                                </br> <span style="color: #b71c1c;">Keyboard:</span> Razer Blackwidow Chroma Tournament Edition
                                 </br>
                                 </br> <span style="color: #b71c1c;">Camera:</span> Logitech C720
                                 </br>
@@ -156,7 +156,7 @@ M                                </br>
                                 </br>
                                 </br> <span style="color: #b71c1c;">Mic Filter:</span> PEMOTech Pop Filter (3 Layer)
                                 </br>
-                                </br>
+                                </br> <span style="color: #b71c1c;">Headset:</span> Logitech G Pro X
                                 </br>
                                 </br>
                                 </br>
