--- a/About/index.html
+++ b/About/index.html
@@ -159,14 +159,14 @@
         <div class="footer-inner">
             <img src="media/logo.png" width="80" height="80"></img>
             <div class="social">
-                <a href="https://Twitch.tv/DoctorSoup143_" class="fab fa-twitch" target="_blank"></a>
+                <a href="https://Twitch.tv/DoctorSoup143" class="fab fa-twitch" target="_blank"></a>
                 <a href="https://twitter.com/DoctorSoup143" class="fab fa-twitter" target="_blank"></a>
                 <a href="https://www.youtube.com/channel/UC2LgikNXNwuHifq7XpQD4vA?" class="fab fa-youtube" target="_blank"></a>
                 <a href="https://open.spotify.com/user/qpxp7w8922gn0gd25b6xwv2v7?si=VC5li0fGS8asgzrOJ2JBGg" class="fab fa-spotify" target="_blank"></a>
                 <a href="https://www.instagram.com/DoctorSoup143/" class="fab fa-instagram" target="_blank"></a>
             </div>
             <div class="legal">
-                <p>© Copyright DoctorSoup143 - 2019 | <a href="http://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="http://DoctorSoup143.tv/Contact">Contact</a></p>
+                <p>© Copyright DoctorSoup143 - 2020 | <a href="http://DoctorSoup143.tv/Privacy">Privacy Policy</a> | <a href="http://DoctorSoup143.tv/Contact">Contact</a></p>
             </div>
         </div>
     </div>
