Nav Bar Changes
-Added the tarkov handbook Nav Link
-Deleted Team page and folder

--- a/About/index.html
+++ b/About/index.html
@@ -35,6 +35,7 @@
                 appId: "a091703d-4b12-434c-aa24-934282860804",
             });
         });
+
     </script>
 </head>
 
@@ -51,7 +52,7 @@
                     <a href="https://DoctorSoup143.tv/About" class="hover_link">About</a>
                 </li>
                 <li>
-                    <a href="https://DoctorSoup143.tv/Teams" class="hover_link">Teams</a>
+                    <a href="https://TheTarkovHandbook.DoctorSoup143.tv/" class="hover_link">Handbook</a>
                 </li>
                 <li>
                     <a href="https://DoctorSoup143.tv/Contact" class="hover_link">Contact</a>
@@ -59,10 +60,10 @@
             </ul>
         </nav>
     </div>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <br />
+    <br />
+    <br />
+    <br />
 
     <!-- About Me -->
     <div class="container">
@@ -71,8 +72,8 @@
             <div class="col-12">
                 <div class="text-div" align="center">
                     <p class="text" style="font-size: 30px; text-align:center; color:#ffffff; padding: 8px;">
-                        <br/> I started gaming at a very young age. When I moved to PC I quickly took to competitive and realistic shooters like ArmA, Overwatch, PUBG, Escape From Tarkov, and Apex Legends. After moving to PC I soon discovered streaming. While exploring competitive gaming I also was developing my skills as a musician and taking music theory courses. Since then I've been involved in competitive teams in Overwatch, became a top 100 PUBG player, and have created my own competitive team.
-                        <br/>
+                        <br /> I started gaming at a very young age. When I moved to PC I quickly took to competitive and realistic shooters like ArmA, Overwatch, PUBG, Escape From Tarkov, and Apex Legends. After moving to PC I soon discovered streaming. While exploring competitive gaming I also was developing my skills as a musician and taking music theory courses. Since then I've been involved in competitive teams in Overwatch, became a top 100 PUBG player, and have created my own competitive team.
+                        <br />
                     </p>
                     <span class="line-border"></span>
                 </div>
@@ -85,28 +86,28 @@
 
     <!-- Spotify Playlists -->
     <p class="title" align="center">Stream Music</p>
-	<div class="row justify-content-md-center">
+    <div class="row justify-content-md-center">
         <div id="music" class="col-0" align="center">
-			<iframe src="https://open.spotify.com/embed/user/qpxp7w8922gn0gd25b6xwv2v7/playlist/0NQQQZYXvTYeTsxu4oWZXD" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-		</div>
-		<div id="music" class="col-0" align="center">
-			<iframe src="https://open.spotify.com/embed/user/qpxp7w8922gn0gd25b6xwv2v7/playlist/1UoAtbOCSKMJrPTlLQU1t5" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-		</div>
-		<div id="music" class="col-0" align="center">
-			<iframe src="https://open.spotify.com/embed/user/qpxp7w8922gn0gd25b6xwv2v7/playlist/5696X0PjPAETaUDnQ1GCJa" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-		</div>
-	</div>
-    <br/>
-    <br/>
-    <br/>
-	
-	
-	
-	
-	
-	
-	
-	
+            <iframe src="https://open.spotify.com/embed/user/qpxp7w8922gn0gd25b6xwv2v7/playlist/0NQQQZYXvTYeTsxu4oWZXD" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+        <div id="music" class="col-0" align="center">
+            <iframe src="https://open.spotify.com/embed/user/qpxp7w8922gn0gd25b6xwv2v7/playlist/1UoAtbOCSKMJrPTlLQU1t5" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+        <div id="music" class="col-0" align="center">
+            <iframe src="https://open.spotify.com/embed/user/qpxp7w8922gn0gd25b6xwv2v7/playlist/5696X0PjPAETaUDnQ1GCJa" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+    </div>
+    <br />
+    <br />
+    <br />
+
+
+
+
+
+
+
+
 
     <!-- Credit Tab -->
     <div class="container">
@@ -115,12 +116,12 @@
                 <button class="collapsible">Credit Where Credit is Due</button>
                 <div class="content">
                     <p>
-                        <br/><u><span style="font-size: 30px;">Website Design</span></u>
-                        <br/>DoctorSoup143
-                        <br/>
-                        <br/><u><span style="font-size: 30px;">Stream Art & Animations</span></u>
-                        <br/><a href="https://Twitch.tv/Mind1" style="color: #b71c1c; font-size: 25px;" target="_blank">Mind1</a>
-                        <br/>
+                        <br /><u><span style="font-size: 30px;">Website Design</span></u>
+                        <br />DoctorSoup143
+                        <br />
+                        <br /><u><span style="font-size: 30px;">Stream Art & Animations</span></u>
+                        <br /><a href="https://Twitch.tv/Mind1" style="color: #b71c1c; font-size: 25px;" target="_blank">Mind1</a>
+                        <br />
                         <!--    <br/><u><span style="font-size: 30px;">Sponsors</span></u>
                         <br/> -->
                     </p>
@@ -143,6 +144,7 @@
                         }
                     });
                 }
+
             </script>
         </div>
 
