--- a/Contact/index.html
+++ b/Contact/index.html
@@ -35,6 +35,7 @@
                 appId: "a091703d-4b12-434c-aa24-934282860804",
             });
         });
+
     </script>
 </head>
 
@@ -52,7 +53,7 @@
                     <a href="https://DoctorSoup143.tv/About" class="hover_link">About</a>
                 </li>
                 <li>
-                    <a href="https://DoctorSoup143.tv/Teams" class="hover_link">Teams</a>
+                    <a href="https://DoctorSoup143.tv/Teams" class="hover_link">Handbook</a>
                 </li>
                 <li>
                     <a href="https://DoctorSoup143.tv/Contact" class="hover_link">Contact</a>
@@ -74,8 +75,8 @@
                     <option value="Competitive Team Inquiry">The Tarkov Handbook</option>
                     <option id="admOption" value="Other">Other</option>
                 </select>
-				
-				<!--
+
+                <!--
 				<select id="input2" name="Quality:" required>
 					<option value="" selected disabled hidden>Video Quality</option>
 					<option value="720p">720p 60FPS</option>
@@ -84,8 +85,8 @@
 				</select>
 				<input id="input11" name="Game" placeholder="Game" required>
 				-->
-				
-				<textarea id="input3" name="Message:" placeholder="Message" required></textarea>
+
+                <textarea id="input3" name="Message:" placeholder="Message" required></textarea>
                 <button id="input4" type="submit">Submit</button>
             </form>
         </div>
