--- a/Merch/index.html
+++ b/Merch/index.html
@@ -38,12 +38,14 @@
                 appId: "a091703d-4b12-434c-aa24-934282860804",
             });
         });
+
     </script>
     <!-- Disclaimer -->
     <script>
         window.onload = function() {
             alert('Disclaimer: This page is currently under development. Not all site features will be avaiable at this time.');
         }
+
     </script>
 </head>
 
@@ -64,7 +66,7 @@
                         <a href="https://DoctorSoup143.tv/Merch" class="hover_link">Merch</a>
                     </li>
                     <li>
-                        <a href="https://DoctorSoup143.tv/TeamPotato" class="hover_link">TeamPotato</a>
+                        <a href="https://TheTarkovHandbook.DoctorSoup143.tv/" class="hover_link">Handbook</a>
                     </li>
                     <li>
                         <a href="https://DoctorSoup143.tv/Contact" class="hover_link">Contact</a>
@@ -72,10 +74,10 @@
                 </ul>
             </nav>
         </div>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+        <br />
+        <br />
+        <br />
+        <br />
 
         <!-- Merch Tiles -->
         <p class="title" align="center">Merch Placeholder</p>
