--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="https://DoctorSoup143.tv/About" class="hover_link">About</a>
                 </li>
                 <li>
-                    <a href="https://DoctorSoup143.tv/Teams" class="hover_link">Teams</a>
+                    <a href="https://TheTarkovHandbook.DoctorSoup143.tv/" class="hover_link">Handbook</a>
                 </li>
                 <li>
                     <a href="https://DoctorSoup143.tv/Contact" class="hover_link">Contact</a>
