--- a/Privacy/index.html
+++ b/Privacy/index.html
@@ -35,6 +35,7 @@
                 appId: "a091703d-4b12-434c-aa24-934282860804",
             });
         });
+
     </script>
 </head>
 
@@ -52,7 +53,7 @@
                     <a href="https://DoctorSoup143.tv/About" class="hover_link">About</a>
                 </li>
                 <li>
-                    <a href="https://DoctorSoup143.tv/Teams" class="hover_link">Teams</a>
+                    <a href="https://TheTarkovHandbook.DoctorSoup143.tv/" class="hover_link">Handbook</a>
                 </li>
                 <li>
                     <a href="https://DoctorSoup143.tv/Contact" class="hover_link">Contact</a>
@@ -60,10 +61,10 @@
             </ul>
         </nav>
     </div>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <br />
+    <br />
+    <br />
+    <br />
 
     <!-- Privacy Policy -->
     <div class="container">
@@ -74,7 +75,7 @@
 
             <div class="text-div" align="center">
                 <p class="text">
-                    <br/> This policy will explain areas of this website that may affect your privacy and personal details, how we process, collect, manage and store those details and how your rights under the GDPR, DPA & PECR are adhere to. Additionally it will explain the use of cookies or software, advertising or commercial sponsorship from third parties and the download of any documents, files or software made available to you (if any) on this website. Further explanations may be provided for specific pages or features of this website in order to help you understand how we, this website and its third parties (if any) interact with you and your computer/device in order to serve it to you. Our contact information is provided if you have any questions.</p>
+                    <br /> This policy will explain areas of this website that may affect your privacy and personal details, how we process, collect, manage and store those details and how your rights under the GDPR, DPA & PECR are adhere to. Additionally it will explain the use of cookies or software, advertising or commercial sponsorship from third parties and the download of any documents, files or software made available to you (if any) on this website. Further explanations may be provided for specific pages or features of this website in order to help you understand how we, this website and its third parties (if any) interact with you and your computer/device in order to serve it to you. Our contact information is provided if you have any questions.</p>
                 <span class="line-border"></span>
             </div>
         </div>
@@ -87,7 +88,7 @@
 
             <div class="text-div" align="center">
                 <p class="text">
-                    <br/> This website uses tracking software to monitor its visitors to better understand how they use it. The software will save a cookie to your computers hard drive in order to track and monitor your engagement and usage of the website, but will not store, save or collect personal information.</p>
+                    <br /> This website uses tracking software to monitor its visitors to better understand how they use it. The software will save a cookie to your computers hard drive in order to track and monitor your engagement and usage of the website, but will not store, save or collect personal information.</p>
                 <span class="line-border"></span>
             </div>
         </div>
@@ -100,7 +101,7 @@
 
             <div class="text-div" align="center">
                 <p class="text">
-                    <br/> Users contacting us through this website do so at their own discretion and provide any such personal details requested at their own risk. Your personal information is kept private and stored securely until a time it is no longer required or has no use. Where we have clearly stated and made you aware of the fact, and where you have given your express permission, we may use your details to send you products/services information through a mailing list system. This is done in accordance with the regulations named in 'The policy' above.</p>
+                    <br /> Users contacting us through this website do so at their own discretion and provide any such personal details requested at their own risk. Your personal information is kept private and stored securely until a time it is no longer required or has no use. Where we have clearly stated and made you aware of the fact, and where you have given your express permission, we may use your details to send you products/services information through a mailing list system. This is done in accordance with the regulations named in 'The policy' above.</p>
                 <span class="line-border"></span>
             </div>
         </div>
@@ -113,8 +114,8 @@
 
             <div class="text-div" align="center">
                 <p class="text">
-                    <br/> Although we only look to include quality, safe and relevant external links, users are advised to adopt a policy of caution before clicking any external web links mentioned throughout this website.
-                    <br/> (External links are clickable text, banner, or image links to other websites.)</p>
+                    <br /> Although we only look to include quality, safe and relevant external links, users are advised to adopt a policy of caution before clicking any external web links mentioned throughout this website.
+                    <br /> (External links are clickable text, banner, or image links to other websites.)</p>
                 <span class="line-border"></span>
             </div>
         </div>
