--- a/Specs/index.html
+++ b/Specs/index.html
@@ -43,7 +43,7 @@
                     <a href="https://DoctorSoup143.tv/About" class="hover_link" style="font-family: 'Teko', sans-serif;">About</a>
                 </li>
                 <li>
-                    <a href="https://DoctorSoup143.tv/Teams" class="hover_link" style="font-family: 'Teko', sans-serif;">Teams</a>
+                    <a href="https://TheTarkovHandbook.DoctorSoup143.tv/" class="hover_link">Handbook</a>
                 </li>
                 <li>
                     <a href="https://DoctorSoup143.tv/Contact" class="hover_link" style="font-family: 'Teko', sans-serif;">Contact</a>
