--- a/Specs/index.html
+++ b/Specs/index.html
@@ -51,12 +51,12 @@
             </ul>
         </nav>
     </div>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
     <!-- Specs Interactive -->
     <div class="container-fluid">
@@ -85,10 +85,10 @@
                                 </br>
                                 </br> <span style="color: #b71c1c;">GPU:</span> ZOTAC 2080 Blower Edition
                                 </br>
-                                </br> <span style="color: #b71c1c;">RAM:</span> 16GB HyperX DDR4 2200MHz
+                                </br> <span style="color: #b71c1c;">RAM:</span> 32GB Corsair Vengeangce RGB DDR4 3200MHz
                                 </br>
                                 </br> <span style="color: #b71c1c;">Power Supply:</span> Corsair TX750
-M                                </br>
+                                M </br>
                                 </br> <span style="color: #b71c1c;">CPU Cooler:</span> Corsair Hydro Series H100i
 
                                 </br>
