--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             </ul>
         </nav>
     </div>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <br />
+    <br />
+    <br />
+    <br />
 
     <!-- Name & Description -->
     <div class="container-fluid">
@@ -78,10 +78,10 @@
             <div class="col-0" align="center">
                 <a href="https://streamlabs.com/DoctorSoup143" target="_blank" class="Twitch-button"><span class="left"><i class="fas fa-hand-holding-usd"></i></span><span class="right">Send A Tip</span></a>
             </div>
-			<div class="col-0" align="center">
+            <div class="col-0" align="center">
                 <a href="https://www.twitch.tv/products/doctorsoup143" target="_blank" class="Twitch-button"><span class="left"><i class="far fa-star"></i></span><span class="right">Subscribe</span></a>
             </div>
-			<!--
+            <!--
             <div class="col-0" align="center">
                 <a href="https://www.twitch.tv/subs/DoctorSoup143" target="_blank" class="Mixer-button-sub"><span class="left">Subscribe</span><span class="right">$4.99</span></a>
             </div>
@@ -93,10 +93,10 @@
         <!-- Stream & Chat iFrames -->
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-8">
-                <iframe class="stream" src="https://player.twitch.tv/?channel=doctorsoup143"></iframe>
-				</div>
+                <iframe class="stream" src="https://player.twitch.tv/?channel=doctorsoup143&parent=www.doctorsoup143.tv"></iframe>
+            </div>
             <div class="col-12 col-md-3">
-                <iframe class="chat" src="https://www.twitch.tv/embed/doctorsoup143/chat?darkpopout"></iframe>
+                <iframe class="chat" src="https://www.twitch.tv/embed/doctorsoup143/chat?parent=www.doctorsoup143.tv"></iframe>
             </div>
         </div>
         <br>
@@ -156,6 +156,4 @@
             </div>
         </div>
     </div>
-</footer>
-
-</html>
+</footer></html>
