--- a/Contact/index.html
+++ b/Contact/index.html
@@ -69,23 +69,12 @@
             <form action="https://formspree.io/DoctorSoup143@gmail.com" method="POST">
                 <input id="input1" name="Name:" placeholder="Name" required>
                 <input id="input11" name="Email:" placeholder="Email" required>
-                <select id="input2" name="Reason:" required>
+                <select id="input2" name="Subject:" required>
                     <option value="" selected disabled hidden>Subject</option>
-                    <option value="Stream Inquiry">Buisness Inquiry</option>
-                    <option value="Competitive Team Inquiry">The Tarkov Handbook</option>
+                    <option value="Buisness Inquiry">Buisness Inquiry</option>
+                    <option value="The Tarkov Handbook">The Tarkov Handbook</option>
                     <option id="admOption" value="Other">Other</option>
                 </select>
-
-                <!--
-				<select id="input2" name="Quality:" required>
-					<option value="" selected disabled hidden>Video Quality</option>
-					<option value="720p">720p 60FPS</option>
-					<option value="1080p">1080p 60FPS</option>
-					<option value="1080p+">Over 1080p 60FPS</option>
-				</select>
-				<input id="input11" name="Game" placeholder="Game" required>
-				-->
-
                 <textarea id="input3" name="Message:" placeholder="Message" required></textarea>
                 <button id="input4" type="submit">Submit</button>
             </form>
