--- a/index.html
+++ b/index.html
@@ -82,12 +82,6 @@
             <div class="col-0" align="center">
                 <a href="https://www.twitch.tv/products/doctorsoup143" target="_blank" class="Twitch-button"><span class="left"><i class="far fa-star"></i></span><span class="right">Subscribe</span></a>
             </div>
-            <!--
-            <div class="col-0" align="center">
-                <a href="https://www.twitch.tv/subs/DoctorSoup143" target="_blank" class="Mixer-button-sub"><span class="left">Subscribe</span><span class="right">$4.99</span></a>
-            </div>
-			-->
-
         </div>
         <br>
 
@@ -146,7 +140,7 @@
         <div class="footer-inner">
             <img src="media/logo.png" width="80" height="80"></img>
             <div class="social">
-                <a href="https://Twitch.tv/DoctorSoup143_" class="fab fa-twitch" target="_blank"></a>
+                <a href="https://Twitch.tv/DoctorSoup143" class="fab fa-twitch" target="_blank"></a>
                 <a href="https://twitter.com/DoctorSoup143" class="fab fa-twitter" target="_blank"></a>
                 <a href="https://www.youtube.com/channel/UC2LgikNXNwuHifq7XpQD4vA?" class="fab fa-youtube" target="_blank"></a>
                 <a href="https://open.spotify.com/user/qpxp7w8922gn0gd25b6xwv2v7?si=VC5li0fGS8asgzrOJ2JBGg" class="fab fa-spotify" target="_blank"></a>
