--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- JS Links -->
     <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- Push Notifications -->
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-    <script>
-        var OneSignal = window.OneSignal || [];
-        OneSignal.push(function() {
-            OneSignal.init({
-                appId: "a091703d-4b12-434c-aa24-934282860804",
-            });
-        });
-
-    </script>
+    <!-- More Site Properties -->
+    <meta property="og:title" content="DoctorSoup143.tv" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://DoctorSoup143.tv" />
+    <meta property="og:image" content="https://doctorsoup143.tv/media/logo.png" />
+    <meta property="og:description" content="Become Elite." />
+    <meta name="theme-color" content="#B71C1C">
 </head>
 
 <body>
