Added Channel Trailer

--- a/index.html
+++ b/index.html
@@ -81,13 +81,22 @@
         </div>
         <br>
 
-        <!-- Stream & Chat iFrames -->
+        <!-- Channel Trailer -->
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-8">
-                <iframe class="stream" src="https://player.twitch.tv/?channel=doctorsoup143&parent=www.doctorsoup143.tv"></iframe>
+                <video id="video" class="video" autoplay controls>
+                    <source src="media/elite.mp4" type="video/mp4">
+                    Your browser doesn't support playing this video.
+                </video>
+                <!-- Set Volume To 40% -->
+                <script>
+                    document.getElementById("video").volume = 0.15;
+
+                </script>
+                <iframe class="stream" src="https://player.twitch.tv/?channel=doctorsoup143"></iframe>
             </div>
             <div class="col-12 col-md-3">
-                <iframe class="chat" src="https://www.twitch.tv/embed/doctorsoup143/chat?parent=www.doctorsoup143.tv"></iframe>
+                <iframe class="chat" src="https://www.twitch.tv/embed/doctorsoup143/chat?darkpopout"></iframe>
             </div>
         </div>
         <br>
