--- a/index.html
+++ b/index.html
@@ -91,47 +91,47 @@
                 <!-- Set Volume To 40% -->
                 <script>
                     document.getElementById("video").volume = 0.15;
-
                 </script>
             </div>
-            <br>
-            <br>
-            <br>
+        </div>
+        <br>
+        <br>
+        <br>
 
-            <!-- Discord iFrame -->
-            <div class="row justify-content-md-center">
-                <div class="col-12 col-md-3" align="center">
-                    <iframe id="discord" src="https://discordapp.com/widget?id=147039228830810112&amp;theme=dark"></iframe>
-                </div>
-
-                <!-- YouTube iFrame -->
-                <div class="col-12 col-md-5" align="center">
-                    <iframe id="youtube" src="https://www.youtube.com/embed/videoseries?list=PLP0S2sZXpd0M2AZxS9ActYzlc9AAJXJE-&showinfo=1&rel=0"></iframe>
-
-                    <!-- Specs & Spotify Tiles -->
-                    <button class="tiles" onclick="window.location.href='https://open.spotify.com/user/qpxp7w8922gn0gd25b6xwv2v7?si=VC5li0fGS8asgzrOJ2JBGg'"><i class="fab fa-spotify"></i>
-                        <button class="tiles" onclick="window.location.href='https://www.youtube.com/channel/UC2LgikNXNwuHifq7XpQD4vA?view_as=subscriber'"><i class="fab fa-youtube"></i></button>
-                        <button class="tiles" onclick="window.location.href='https://DoctorSoup143.tv/Merch'"><i class="fas fa-tshirt"></i></button>
-                        <button class="tiles" onclick="window.location.href='https://twitter.com/DoctorSoup143'"><i class="fab fa-twitter"></i></button>
-                        <button class="tiles" onclick="window.location.href='https://DoctorSoup143.tv/Specs'"><i class="fas fa-desktop"></i></button>
-                        <button class="tiles" onclick="window.location.href='https://www.instagram.com/DoctorSoup143/'"><i class="fab fa-instagram"></i></button>
-                </div>
-
-                <!-- Twitter iFrame -->
-                <div class="col-12 col-md-3" align="center">
-                    <a class="twitter-timeline" data-width="100%" data-height="50.5em" data-theme="dark" href="https://twitter.com/DoctorSoup143">Tweets by DoctorSoup143</a>
-                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
+        <!-- Discord iFrame -->
+        <div class="row justify-content-md-center">
+            <div class="col-12 col-md-3" align="center">
+                <iframe id="discord" src="https://discordapp.com/widget?id=147039228830810112&amp;theme=dark"></iframe>
             </div>
 
-            <!-- Particles Background -->
-            <div id="particles-js"></div>
-            <script type="text/javascript" src="js/particles.js"></script>
-            <script type="text/javascript" src="js/app.js"></script>
-            <br>
-            <br>
+            <!-- YouTube iFrame -->
+            <div class="col-12 col-md-5" align="center">
+                <iframe id="youtube" src="https://www.youtube.com/embed/videoseries?list=PLP0S2sZXpd0M2AZxS9ActYzlc9AAJXJE-&showinfo=1&rel=0"></iframe>
 
+                <!-- Specs & Spotify Tiles -->
+                <button class="tiles" onclick="window.location.href='https://open.spotify.com/user/qpxp7w8922gn0gd25b6xwv2v7?si=VC5li0fGS8asgzrOJ2JBGg'"><i class="fab fa-spotify"></i>
+                    <button class="tiles" onclick="window.location.href='https://www.youtube.com/channel/UC2LgikNXNwuHifq7XpQD4vA?view_as=subscriber'"><i class="fab fa-youtube"></i></button>
+                    <button class="tiles" onclick="window.location.href='https://DoctorSoup143.tv/Merch'"><i class="fas fa-tshirt"></i></button>
+                    <button class="tiles" onclick="window.location.href='https://twitter.com/DoctorSoup143'"><i class="fab fa-twitter"></i></button>
+                    <button class="tiles" onclick="window.location.href='https://DoctorSoup143.tv/Specs'"><i class="fas fa-desktop"></i></button>
+                    <button class="tiles" onclick="window.location.href='https://www.instagram.com/DoctorSoup143/'"><i class="fab fa-instagram"></i></button>
+            </div>
+
+            <!-- Twitter iFrame -->
+            <div class="col-12 col-md-3" align="center">
+                <a class="twitter-timeline" data-width="100%" data-height="50.5em" data-theme="dark" href="https://twitter.com/DoctorSoup143">Tweets by DoctorSoup143</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
+
+        <!-- Particles Background -->
+        <div id="particles-js"></div>
+        <script type="text/javascript" src="js/particles.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <br>
+        <br>
+
+    </div>
 </body>
 
 <footer>
@@ -151,6 +151,4 @@
             </div>
         </div>
     </div>
-</footer>
-
-</html>
+</footer></html>
