--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://DoctorSoup143.tv" />
     <meta property="og:image" content="https://doctorsoup143.tv/media/logo.png" />
-    <meta property="og:description" content="Become Elite." />
+    <meta property="og:description" content="Escape From Tarkov god, tech genius, and eclectic music connoisseur." />
     <meta name="theme-color" content="#B71C1C">
 </head>
 
@@ -91,6 +91,7 @@
                 <!-- Set Volume To 40% -->
                 <script>
                     document.getElementById("video").volume = 0.15;
+
                 </script>
             </div>
         </div>
@@ -151,4 +152,6 @@
             </div>
         </div>
     </div>
-</footer></html>
+</footer>
+
+</html>
