--- a/Specs/index.html
+++ b/Specs/index.html
@@ -77,11 +77,11 @@
                     <div class="halfScreen contentLeft">
                         <div class="contentPanel">
                             <h5 class="panelTitle">Gaming PC Specs</h5>
-                            <p class="panelDesc"> <span style="color: #b71c1c;">Case:</span> NZXT 500i
+                            <p class="panelDesc"> <span style="color: #b71c1c;">Case:</span> NZXT 500i Overwatch Edition
                                 </br>
-                                </br> <span style="color: #b71c1c;">Motherboard:</span> MSI X99A SLI Plus
+                                </br> <span style="color: #b71c1c;">Motherboard:</span> MSI Z590-A Pro
                                 </br>
-                                </br> <span style="color: #b71c1c;">CPU:</span> Intel i7 6800K
+                                </br> <span style="color: #b71c1c;">CPU:</span> Intel i7 10700k
                                 </br>
                                 </br> <span style="color: #b71c1c;">GPU:</span> ZOTAC 2080 Blower Edition
                                 </br>
@@ -109,15 +109,15 @@
 
                         <div class="contentPanel">
                             <h5 class="panelTitle">Streaming Pc Specs</h5>
-                            <p class="panelDesc"> <span style="color: #b71c1c;">Case:</span> Corsair Carbide 100r
+                            <p class="panelDesc"> <span style="color: #b71c1c;">Case:</span> NZXT 500i
                                 </br>
-                                </br> <span style="color: #b71c1c;">Motherboard:</span> Gigabyte GA-78LMT-USB3
+                                </br> <span style="color: #b71c1c;">Motherboard:</span> MSI X99A SLI Plus
                                 </br>
-                                </br> <span style="color: #b71c1c;">CPU:</span> AMD FX 8350
+                                </br> <span style="color: #b71c1c;">CPU:</span> Intel i7 6800k
                                 </br>
-                                </br> <span style="color: #b71c1c;">GPU:</span> NVIDIA GTX 750 TI
+                                </br> <span style="color: #b71c1c;">GPU:</span> NVIDIA GTX 1070
                                 </br>
-                                </br> <span style="color: #b71c1c;">RAM:</span> 16GB DDR3
+                                </br> <span style="color: #b71c1c;">RAM:</span> 16GB DDR4 3200MHz
                                 </br>
                                 </br> <span style="color: #b71c1c;">Power Supply:</span> Corsair CX650
                                 </br>
